--- a/static/styles.css
+++ b/static/styles.css
@@ -31,12 +31,10 @@ video {
   height: auto;
 }
 
-html {
+html, .font-sans {
   line-height: 1.5;
   -webkit-text-size-adjust: 100%;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "IBM Plex Sans Arabic" !important;
 }
 
 .text-creepy {
