--- a/static/toastify.css
+++ b/static/toastify.css
@@ -1,5 +1,5 @@
 .toastify-success{
-  background: linear-gradient(to right, #00b09b, #96c93d) !important,
+  background: linear-gradient(to right, #00b09b, #96c93d) !important;
 }
 .toastify-info{
   background: linear-gradient(135deg, #73a5ff, #5477f5) !important;
